# netprog

./: GRAB_CFG.py  colors.py  colortrans.py  ssh-copy-net.py  ssh_scrapli.py  test.py
MIT/: guess_my_number.py
Norsi_j2/: addresses.txt  jinjapolicy.py  policy.txt  sg.txt
async_ssh/: async_jun.py  huawei_test.py  test.py
crypto/: ca-private-key.pem  ca-public-key.pem  pki_helpers.py  server-csr.pem  server-private-key.pem  server-public-key.pem  symmetric_client.py  symmetric_server.py
django_study/: pyproject.toml
django_study/myproject/: db.sqlite3
django_study/myproject/myproject/: settings.py  urls.py
django_study/myproject/testapp/: views.py
django_study/rp-portfolio/: db.sqlite3
django_study/rp-portfolio/blog/: views.py
django_study/rp-portfolio/blog/migrations/: 0001_initial.py
django_study/rp-portfolio/personal_portfolio/: settings.py
django_study/rp-portfolio/projects/migrations/: 0001_initial.py
go/: basic_middleware.go  client.go  hello_world_web.go  router.go  server.go
go_noob/: 1re.xml  2re.xml  nb.go  netc.go  netc2.go  ssh.go  ssh2.go  test.go  test2.go  xml_from_file.go  xml_from_stdin.go
handmade_crypto/: crypt.py  handmade_crypto.py  secret.key
salt/: config  docker-compose.yml
ydk_tests/: codecservice.py  csr_get_config.py  devices.py  get_config.py  get_csr_schemas.py  interfaces.yml  junos_config.yml  junos_config_openconfig.py  openconfig_acl.py  openconfig_bgp.py  openconfig_bgp_junos.py  recursive.py  schemas.py  test.py  xe_config_interface.py  xe_config_native.py  xe_config_native.yml  xe_config_native_json.py  (+3 more)
(+262 files in other folders)
