[tool.poetry]
name = "django_study"
version = "0.1.0"
description = ""
authors = ["horseinthesky <pwnedbyspawn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.1"

[tool.poetry.dev-dependencies]
ipython = "^7.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
